force-app/main/default/objects/b3o__Session_Invitation__c/b3o__Session_Invitation__c.object-meta.xml
<CustomObject>
    <label>Session Invitation</label>
    <nameField>
        <displayFormat>SESSION-I-{0}</displayFormat>
        <label>Session Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>