force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Booking_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__Booking_Start_Time__c</fullName>
    <formula>if(isblank(b3o__Session_Schedule__c),  b3o__Start_Time__c  , b3o__Session_Schedule__r.b3o__Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the absolute booking start time</inlineHelpText>
    <label>Booking Start Time</label>
    <type>DateTime</type>
</CustomField>