force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Booking_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>b3o__Booking_Time_Text__c</fullName>
    <inlineHelpText>The times displayed to the user at the time of booking</inlineHelpText>
    <label>Booking Time (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>