force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Booking_Timezone__c.field-meta.xml
<CustomField>
    <fullName>b3o__Booking_Timezone__c</fullName>
    <inlineHelpText>This is the TZ identifier at the time of the booking. All times were displayed in this timezone. You can use this in order to send a confirmation email with the correct timezone offset to the person.</inlineHelpText>
    <label>Booking Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>