force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Cancelled__c.field-meta.xml
<CustomField>
    <fullName>b3o__Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>