force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Invitations</relationshipLabel>
    <relationshipName>Session_Invitations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>