force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Invitation_Status__c</fullName>
    <formula>if( b3o__Revoke_Invitation__c, &apos;Revoked&apos;, if(isblank( b3o__Booking_Start_Time__c ), &quot;Invited&quot;, &quot;Booked&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Status</label>
    <type>Text</type>
</CustomField>