force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Public_Message__c.field-meta.xml
<CustomField>
    <fullName>b3o__Public_Message__c</fullName>
    <inlineHelpText>This will be visible to the invitee</inlineHelpText>
    <label>Public Message</label>
    <type>TextArea</type>
</CustomField>