force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Revoke_Invitation__c.field-meta.xml
<CustomField>
    <fullName>b3o__Revoke_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revoke Invitation</label>
    <type>Checkbox</type>
</CustomField>