force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Self_Booking_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>b3o__Self_Booking_Timestamp__c</fullName>
    <label>Self-Booking Timestamp</label>
    <type>DateTime</type>
</CustomField>