force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Session__c.field-meta.xml
<CustomField>
    <fullName>b3o__Session__c</fullName>
    <label>Session</label>
    <referenceTo>b3o__Session__c</referenceTo>
    <relationshipLabel>Session Invitations</relationshipLabel>
    <relationshipName>Session_Invitations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>