force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Session_Schedule__c.field-meta.xml
<CustomField>
    <fullName>b3o__Session_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Schedule</label>
    <referenceTo>b3o__Session_Schedule__c</referenceTo>
    <relationshipLabel>Session Invitations</relationshipLabel>
    <relationshipName>Session_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>