force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Source_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>b3o__Source_of_Booking__c</fullName>
    <inlineHelpText>Based on configuration, the source will display from what page the user booked themselves in for the session</inlineHelpText>
    <label>Source of Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>