force-app/main/default/objects/b3o__Session_Invitation__c/fields/b3o__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__Start_Time__c</fullName>
    <inlineHelpText>Start Time of Booking</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>